[gd_scene load_steps=3 format=3 uid="uid://dwcdvyi73goev"]

[ext_resource type="Script" path="res://scripts/home_screen.gd" id="1_78h3v"]
[ext_resource type="PackedScene" uid="uid://t634nhy8jwgx" path="res://scenes/main.tscn" id="2_xt1m3"]

[node name="HomeScreen" type="Node2D"]
script = ExtResource("1_78h3v")

[node name="Play" type="Button" parent="."]
offset_left = 231.0
offset_top = 211.0
offset_right = 381.0
offset_bottom = 261.0
text = "Play"

[node name="Legacy_mode" type="Button" parent="."]
offset_left = 232.0
offset_top = 276.0
offset_right = 382.0
offset_bottom = 326.0
text = "Legacy mode"

[node name="Options" type="Button" parent="."]
offset_left = 595.0
offset_top = 12.0
offset_right = 628.0
offset_bottom = 44.0

[node name="Main" parent="." instance=ExtResource("2_xt1m3")]
visible = false

[connection signal="mouse_entered" from="Play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Legacy_mode" to="." method="_on_legacy_mode_mouse_entered"]
[connection signal="mouse_exited" from="Legacy_mode" to="." method="_on_legacy_mode_mouse_exited"]
[connection signal="pressed" from="Legacy_mode" to="." method="_on_legacy_mode_pressed"]
